--- a/tabs-only.html
+++ b/tabs-only.html
@@ -148,10 +148,10 @@
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.14.2/dist/system.min.js"></script>
   
   <script>
-    // Configure SystemJS
+    // Configure SystemJS - use relative path for production
     System.config({
       map: {
-        '@react-mfe/app': 'http://localhost:4202/react-mfe.js'
+        '@react-mfe/app': '/react-mfe/react-mfe.js'
       }
     });
 
