--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <div class="loading">Loading application...</div>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/zone.js@0.15.0/dist/zone.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.14.2/dist/system.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.14.2/dist/extras/amd.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/systemjs@6.14.2/dist/extras/named-exports.min.js"></script>
@@ -77,18 +78,25 @@
   </script>
 
   <script>
-    System.import('single-spa').then(({ registerApplication, start }) => {
+    System.import('single-spa').then(({ registerApplication, start, mountRootParcel }) => {
+      // Register Angular for home and /angular routes
       registerApplication({
         name: '@angular-spa/shell',
         app: () => System.import('@angular-spa/shell'),
-        activeWhen: (location) => location.pathname === '/' || location.pathname.startsWith('/angular')
+        activeWhen: location => {
+          return location.pathname === '/' || location.pathname.startsWith('/angular');
+        }
       });
 
+      // Register React MFE for /react route
       registerApplication({
         name: '@react-mfe/app',
         app: () => System.import('@react-mfe/app'),
-        activeWhen: (location) => location.pathname.startsWith('/react')
+        activeWhen: location => location.pathname.startsWith('/react')
       });
+      
+      // Expose mountRootParcel globally for Angular to use
+      window.mountRootParcel = mountRootParcel;
 
       start();
 
